--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "jest-transformer-svg": "^2.1.0",
     "postcss": "^8.5.1",
     "tailwindcss": "3",
